<resources>
    <string name="app_name">TV Shows</string>
    <string name="generic_icon">Generic icon</string>
    <string name="let_s_get_you_logged_in">Let\'s get you logged in</string>
    <string name="username">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_schedule">Watch List</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Shows</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="comment">Comment</string>
    <string name="sign_up">Sign Up</string>
    <string name="trouble">We had trouble completing your request</string>
    <string name="logout">Logout</string>
    <string name="no_records_to_display">You have not added any shows</string>
</resources>